
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/veryEasyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <Button
            android:id="@+id/easyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easyBreezy" />

        <Button
            android:id="@+id/mediumBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <Button
            android:id="@+id/veryHardBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veryhard" />

    </LinearLayout>
